--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -204,7 +204,7 @@ For instance, @murphy2019 notes that some items might measure direct interocepti
 
 <!-- Relationship with other interoception measures -->
 Regarding its validity, the IAS has naturally been compared to other interoception-related measures, and shows a positive correlations with most facets of the MAIA [@mehling2018multidimensional; @gaggero2021], except for the Not-Distracting and Not-Worrying subscales [@brand2023] - which were previously highlighted as related to non-interoceptive abilities [@ferentzi2021examining].
-Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ, have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019; @gaggero2021].
+Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ, have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019].
 Positive correlations have also been observed with the "observation" and "description" subscales of the Five Facet Mindfulness Questionnaire [FFMQ, @baer2006using; @brand2023; @koike2023], as well as with the "non-reactivity" and "acting with awareness" subscales [@koike2023].
 Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the Eating Disorder Inventory [EDI-IA, @lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia], as reported by @brand2023 and @murphy2019.
 Lastly, the correlation with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations] appears rather small [@lin2023; @koike2023].
@@ -531,7 +531,7 @@ Overall, the full IAS produced the greatest number of significant standardized e
 Study 2 examined the dispositional correlates of the IAS and whether the refined 14-item version offers practical advantages over the original 21-item scale. The findings clarify the conceptual boundaries of self-reported interoceptive accuracy and underscore the domain-specific nature of these standardized associations.
 
 <!-- Interoception and correlates - item specific -->
-The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on a non-existing association between these measures [@murphy2019; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
+The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on positive association between these measures [@brand2023; @campos2021; @koike2023; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
 
 In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with prior research [@brand2023; @koike2023; @lin2023; @murphy2019]. These associations were strongest for visceral pairings, such as Hungry–Thirsty and Bruise–Blood sugar, and weaker or nonsignificant for other bodily domains, highlighting the domain-specific nature of interoceptive self-report.
 
@@ -539,9 +539,9 @@ Across mood and interoceptive variables, most item pairings displayed small-to-m
 
 <!-- Personality, worldview, and boundaries of interoception -->
 
-Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Openness showed its strongest associations for Breathing–Heart, Neuroticism and Honesty–Humility for Hungry–Thirsty and Bruise–Blood sugar, and Conscientiousness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
+Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Extraversion showed its strongest associations for Breathing–Heart, Neuroticism and Honesty–Humility for Hungry–Thirsty, and Openess, Conscientiousness and Agreeableness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
 
-Associations with belief systems were uniformly small. Weak positive associations emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific pairings - most often Hungry–Thirsty and Bruise–Blood sugar—indicating that links between interoceptive self-report and broader cognitive or worldview constructs are modest and domain-specific.
+Associations with belief systems were uniformly small. Weak positive associations emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific pairings, most often Hungry–Thirsty and Bruise–Blood sugar, indicating that links between interoceptive self-report and broader cognitive or worldview constructs are modest and domain-specific.
 
 <!-- Short IAS benefits and summary-->
 The 14-item IAS performed similarly to the original 21-item version, showing comparable patterns of association with mood, psychopathology, and interoceptive measures. Overall, standardized effects between the IAS and external constructs were not uniform but varied across bodily domains. Visceral item pairs, particularly Hungry–Thirsty and Bruise–Blood sugar, showed the strongest and most consistent relationships with interoceptive, affective, and personality measures, whereas other pairs contributed little unique information, particularily in measures of psychopathologies and beliefs. These findings suggest that the shorter scale efficiently preserves these domain-specific associations, offering a more parsimonious assessment of self-reported interoceptive accuracy, though further validation across independent samples is warranted.
