--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -499,7 +499,7 @@ Autonomic Reactivity (BPQ; mean β = −.19) was reliably negative across pairin
 
 Interoceptive deficits showed consistent negative standardized effects. Alexithymia measures (TAS, BVAQ) were robustly negative (β ≈ −.13 to −.2), except for the BVAQ Affective subscale, which was positive for Bruise–Blood (β = .16). Interoceptive confusion (ICQ) was also negative across all IAS measures (mean β ≈ −.32; range = −.49 to −.20).
 
-<!-- Mood and psychopathology -->
+<!-- Mood-->
 
 Depression (BDI; mean β = −.20) and anxiety (STAI-T; mean β = −.20) showed consistent negative associations across the IAS and its pairings, with the strongest effects observed for the Hungry–Thirsty dimension. Related constructs showed some divergence: the MFQ was largely nonsignificant except for a notable effect in the Breathing–Heart pairing, while somatic concerns (PHQ-15) were unrelated to the total scale but showed weak negative associations with the Hungry–Thirsty, Bruise–Blood sugar, and Urinate–Defecate pairings (β ≈ −.22 to −.05). Other mood indices (PHQ-9, PHQ-4, GAD-7) produced generally weaker but often reliable negative coefficients (typically −.10 to −.15), though effects sometimes appeared only for specific pairings (e.g., PHQ-4 nonsignificant for Wind–Burp and Breathing–Heart). Across measures, the Hungry–Thirsty pairing consistently yielded the strongest standardized effects.
 
@@ -513,7 +513,7 @@ Schizotypal traits showed a similarly negative pattern of associations. Social A
 
 <!-- Personality and beliefs -->
 
-Among Big Five traits, Openness (mean β = .10), Agreeableness (β = .08), and Conscientiousness (β = .11) showed small but consistent positive effects, most evident for the full IAS. Honesty–Humility (mean β = −.10) showed a small negative effect, primarily for Hungry–Thirsty and Bruise–Blood sugar. Neuroticism (mean β = −.13) was negatively associated with the IAS, with the strongest β for Hungry-Thirsty (β = −.23).
+Among the Big Five traits, Openness (mean β = .10), Agreeableness (mean β = .08), and Conscientiousness (mean β = .11) exhibited small yet consistent positive effects, most evident for the full IAS. Extraversion showed a weak but positive association, driven primarily by its stronger relation to the Bruise–Blood pairing (β = .17). In contrast, Honesty–Humility (mean β = −.10) demonstrated a small negative effect, most evident for the Hungry–Thirsty and Bruise–Blood sugar pairings. Finally, Neuroticism (mean β = −.23) was negatively associated with the IAS, with the strongest effect observed for the Hungry–Thirsty pairing (β = −.22).
 
 Primal world beliefs were largely null, with small positive standardized coefficients for certain beliefs: “Understandable,” “Alive,” and “Hierarchical” were weakly positive for the full IAS and Hungry–Thirsty (β ≈ .08–.11), while “Good” was uniquely positive for Muscles–Pain (β ≈ .09). Within the Lying Profile, only Lying Contextuality showed a modest negative coefficient for Bruise–Blood (β = −.12).
 
@@ -531,20 +531,20 @@ Overall, the full IAS produced the greatest number of significant standardized e
 Study 2 examined the dispositional correlates of the IAS and whether the refined 14-item version offers practical advantages over the original 21-item scale. The findings clarify the conceptual boundaries of self-reported interoceptive accuracy and underscore the domain-specific nature of these standardized associations.
 
 <!-- Interoception and correlates - item specific -->
-The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on positive association between these measures [@brand2023; @campos2021; @koike2023; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
+The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023; @todd2022]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on positive association between these measures [@brand2023; @campos2021; @koike2023; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
 
 In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with prior research [@brand2023; @koike2023; @lin2023; @murphy2019]. These associations were strongest for visceral pairings, such as Hungry–Thirsty and Bruise–Blood sugar, and weaker or nonsignificant for other bodily domains, highlighting the domain-specific nature of interoceptive self-report.
 
-Across mood and interoceptive variables, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies. In contrast, associations with psychopathology were more selective: negative associations were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for somatic or respiratory reflexes [@murphy2019; @koike2023].
+Across mood, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies. In contrast, associations with psychopathology were more selective: negative associations were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for somatic or respiratory reflexes [@murphy2019; @koike2023].
 
 <!-- Personality, worldview, and boundaries of interoception -->
 
-Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Extraversion showed its strongest associations for Breathing–Heart, Neuroticism and Honesty–Humility for Hungry–Thirsty, and Openess, Conscientiousness and Agreeableness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
+Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Extraversion showed its strongest associations for Bruise-Blood sugar, Neuroticism and Honesty–Humility for Hungry–Thirsty, and Openess, Conscientiousness and Agreeableness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
 
 Associations with belief systems were uniformly small. Weak positive associations emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific pairings, most often Hungry–Thirsty and Bruise–Blood sugar, indicating that links between interoceptive self-report and broader cognitive or worldview constructs are modest and domain-specific.
 
 <!-- Short IAS benefits and summary-->
-The 14-item IAS performed similarly to the original 21-item version, showing comparable patterns of association with mood, psychopathology, and interoceptive measures. Overall, standardized effects between the IAS and external constructs were not uniform but varied across bodily domains. Visceral item pairs, particularly Hungry–Thirsty and Bruise–Blood sugar, showed the strongest and most consistent relationships with interoceptive, affective, and personality measures, whereas other pairs contributed little unique information, particularily in measures of psychopathologies and beliefs. These findings suggest that the shorter scale efficiently preserves these domain-specific associations, offering a more parsimonious assessment of self-reported interoceptive accuracy, though further validation across independent samples is warranted.
+The 14-item IAS performed similarly to the original 21-item version, showing comparable patterns of association with mood, psychopathology, and interoceptive measures. Overall, standardized effects between the IAS and external constructs were not uniform but varied across bodily domains. Visceral item pairs, particularly Hungry–Thirsty and Bruise–Blood sugar, showed the strongest and most consistent relationships with interoceptive, affective, and personality measures, whereas other pairs contributed little unique information, particularily in measures of psychopathologies and beliefs. These findings suggest that the shorter scale captures domain-specific patterns that were not evident in the full scale, offering a more efficient and nuanced measure of self-reported interoceptive accuracy, though further validation in independent samples is needed.
 
 # General Discussion
 
