added more to conclusion (unfinished)

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -137,6 +137,38 @@
   year={2024},
   publisher={Taylor \& Francis}
 }
+@article{trevisan2021adaptive,
+  title={Adaptive and maladaptive bodily awareness: Distinguishing interoceptive sensibility and interoceptive attention from anxiety-induced somatization in autism and alexithymia},
+  author={Trevisan, Dominic A and Mehling, Wolf E and McPartland, James C},
+  journal={Autism research},
+  volume={14},
+  number={2},
+  pages={240--247},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{tiemann2025relevance,
+  title={The relevance of cardiac and gastric interoception for disordered eating behavior},
+  author={Tiemann, Aline and Ortmann, Julie and Rubo, Marius and Meyer, Andrea H and Munsch, Simone and V{\"o}gele, Claus and van Dyck, Zo{\'e}},
+  journal={Journal of Eating Disorders},
+  volume={13},
+  number={1},
+  pages={114},
+  year={2025},
+  publisher={Springer}
+}
+
+@article{desmedt2022does,
+  title={How does heartbeat counting task performance relate to theoretically-relevant mental health outcomes? A meta-analysis},
+  author={Desmedt, Olivier and Van Den Houte, Maaike and Walentynowicz, Marta and Dekeyser, Sarah and Luminet, Olivier and Corneille, Olivier},
+  journal={Collabra: Psychology},
+  volume={8},
+  number={1},
+  pages={33271},
+  year={2022},
+  publisher={University of California Press}
+}
 
 @article{banellis2025interoceptive,
   title={Interoceptive Ability is Unrelated to Mental Health Symptoms: Evidence From a Large Scale Multi-Domain Psychophysical Investigation},
@@ -601,6 +633,15 @@
   number={56},
   pages={2815},
   year={2020}
+}
+
+@incollection{desmedt2024conceptualization,
+  title={The conceptualization and measurement of interoception},
+  author={Desmedt, Olivier and Corneille, Olivier and Luminet, Olivier},
+  booktitle={Interoception: A Comprehensive Guide},
+  pages={35--74},
+  year={2024},
+  publisher={Springer}
 }
 
 @article{garfinkel2015knowing,
