--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -204,7 +204,7 @@ For instance, @murphy2019 notes that some items might measure direct interocepti
 
 <!-- Relationship with other interoception measures -->
 Regarding its validity, the IAS has naturally been compared to other interoception-related measures, and shows a positive correlations with most facets of the MAIA [@mehling2018multidimensional; @gaggero2021], except for the Not-Distracting and Not-Worrying subscales [@brand2023] - which were previously highlighted as related to non-interoceptive abilities [@ferentzi2021examining].
-Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ, have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019].
+Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ, have been mixed: some studies report small positive correlations [@brand2023; @koike2023; @gaggero2021], while others find small negative correlations [@lin2023], a quadratic positve relationship [@campos2021] or no correlation at all [@murphy2019].
 Positive correlations have also been observed with the "observation" and "description" subscales of the Five Facet Mindfulness Questionnaire [FFMQ, @baer2006using; @brand2023; @koike2023], as well as with the "non-reactivity" and "acting with awareness" subscales [@koike2023].
 Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the Eating Disorder Inventory [EDI-IA, @lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia], as reported by @brand2023 and @murphy2019.
 Lastly, the correlation with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations] appears rather small [@lin2023; @koike2023].
@@ -549,17 +549,31 @@ The 14-item IAS performed similarly to the original 21-item version, showing com
 # General Discussion
 
 <!-- Aims -->
-The present study provides a comprehensive evaluation of the IAS, examining both its structure (study 1) and its dispositional correlates (study 2). These studies offer novel insights into the psychometric characteristics, conceptual interpretation, and practical applications of the IAS. In this discussion, these findings are contextualized within the broader landscape of interoception research.
+The present study provides a comprehensive evaluation of the IAS, examining both its structure (study 1) and its dispositional correlates (study 2). These studies offer novel insights into the conceptual interpretation, and practical applications of the IAS. In this discussion, these findings are contextualized within the broader landscape of interoception research.
 
 <!-- Study 1 findings -->
-A short version of the IAS was previously proposed by @lin2023, who suggested a 12-item version by removing items with local dependency, high difficulty, and/or low discrimination. Their parallel analysis supported a unidimensional structure, although this method tends to underestimate factor numbers in multidimensional data [@golino2017exploratory; @markos2024dimensionality]. Consequently, the 12-item IAS was interpreted as reflecting a single underlying factor of interoceptive accuracy.
 
-In contrast, Study 1 applied multiple complementary methods, including EGA, FA, and HCA. Across datasets and methods, the same tightly coupled item pairs consistently emerged, representing distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena. Several items (e.g., Tickle, Taste, Affective Touch) were removed due to instability, redundancy, or weak associations, resulting in a refined 14-item IAS that retained psychometric robustness while improving interpretability and efficiency.
+In Study 1, the factor structure of the IAS was reanalysed, leading to a refined 14-item version of the scale. A shorter IAS had previously been proposed by @lin2023, who developed a 12-item version by removing items with local dependency, high difficulty, or low discrimination. Their parallel analysis supported a unidimensional structure, although this method is known to underestimate the number of factors in multidimensional data [@golino2017exploratory; @markos2024dimensionality]. Consequently, the 12-item IAS was interpreted as reflecting a single underlying factor of interoceptive accuracy.
 
-These findings challenge the assumption of IAS unidimensionality [@murphy2019; @brand2023]. Whereas @lin2023 ’s IRT-based approach treated locally dependent items as artefacts to be removed, our results suggest that such dependencies may reflect theoretically meaningful pairs (e.g., Heart–Breath). Because IRT assumes unidimensionality [@nguyen2014introduction], it may have obscured these structured item clusters rather than as theoretically relevant structures within interoceptive accuracy.
+In contrast, Study 1 applied multiple complementary analytical approaches, including EGA, FA, and HCA. Across datasets and methods, the same tightly coupled item pairs consistently emerged, corresponding to distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena, after several items (e.g., Tickle, Taste, Affective Touch) were excluded due to instability, redundancy, or weak associations.
+
+These findings challenge the assumption that the IAS is unidimensional [@murphy2019; @brand2023]. Whereas @lin2023’s Item Response Theory (IRT)-based approach treated locally dependent items as artefacts to be removed, our results suggest that such dependencies may instead represent theoretically meaningful relationships (e.g., Heart–Breathing). Because IRT assumes unidimensionality [@nguyen2014introduction], this approach may have obscured structured item clusters that capture distinct but interrelated aspects of interoceptive accuracy. Nevertheless, the resulting 14-item IAS from study 1 demonstrated greater interpretability and efficiency, although its psychometric properties require further validation.
 
 <!-- Study 2 findings -->
-Consistent with prior research, self-reported interoceptive accuracy, as assessed by the IAS, showed reliable associations with other interoceptive and interoception-related measures [@brand2023; @garfinkel2015knowing; @gaggero2021]. Positive correlations emerged with interoceptive sensibility, particularly with MAIA facets related to noticing and trusting bodily sensations, attention regulation, and awareness of mind–body integration. In contrast, negative associations were observed with interoceptive deficits such as alexithymia and interoceptive confusion.
+
+Study 2 examined the associations between the IAS, its item pairs identified in Study 1, and a range of interoceptive, affective, psychopathological, personality, and related measures. Consistent with previous research, self-reported interoceptive accuracy as assessed by the IAS showed reliable associations with other interoceptive and interoception-related measures [@brand2023; @garfinkel2015knowing; @gaggero2021]. Positive associations were found with interoceptive sensibility, particularly with MAIA facets reflecting noticing and trusting bodily sensations, attention regulation, and awareness of mind–body integration. In contrast, negative associations were observed with measures of interoceptive deficits, such as alexithymia and interoceptive confusion.
+
+Although the relationships between the BPQ–Body Awareness and the IAS, and between the BPQ–Autonomic Reactivity and the IAS, were both significant, they showed opposite directions: the former was positive, whereas the latter was negative. These results align with previous findings reporting a small positive association [@brand2023; @koike2023; @gaggero2021]. However, the literature remains mixed regarding the direction, magnitude, and significance of the relationship between the body awareness subscale and the IAS, with some studies reporting negative associations [@lin2023] and others positive [@brand2023; @gaggero2021; @todd2022] and others quadratic [@campos2021].
+
+Moreover, the Body Awareness subscale has been criticised for its ambiguous instructions, specifically whether respondents are meant to indicate attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of such sensations. As a result, associations with other measures may vary depending on how participants interpret the items [@campos2021; @gabriele2022dissociations; @gaggero2021]. The theoretical focus of the BPQ-BA is also debated: some authors interpret it as assessing awareness of sensations during anxiety [@trevisan2021adaptive], whereas others view it as reflecting general awareness of both neutral and negative sensations [@desmedt2022].
+
+Thus, while we found a positive association between the BPQ–Body Awareness subscale and the IAS, this result should be interpreted with caution. Because we could not assess participants’ understanding of the BPQ items, we recommend that future studies using both the BPQ-BA and the IAS control for participants’ interpretation of the scale to clarify the nature of this relationship.
+
+Robust negative associations also emerged between the IAS and mood-related outcomes, aligning with broader evidence linking anxiety and depression to altered interoceptive processing [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. However, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology, suggesting that these relationships may not generalize across bodily domains or measurement modalities [@banellis2025interoceptive; @jenkinson2024interoception]. For instance, meta-analytic evidence indicates that cardiac interoceptive accuracy tasks are not consistently related to symptoms of depression or anxiety [@desmedt2022does; @jenkinson2024interoception]. 
+
+Most previous studies of interoceptive accuracy have relied on objective, performance-based tasks, whereas the IAS represents the first subjective measure explicitly designed to assess perceived interoceptive accuracy. However, correlations between IAS scores and objective measures are typically weak or absent [@arsllanova2022; @brand2023; @petzke2024somatic], highlighting a broader debate about how interoceptive accuracy should be conceptualised and measured. Many researchers argue that accuracy can only be assessed objectively through behavioural tasks, and that self-reports of interoceptive ability more appropriately reflect interoceptive sensibility - i.e., the self-perceived tendency to attend to and interpret bodily signals [@khalsa2018; @garfinkel2015knowing].
+
+Others propose that self-report measures should be distinguished according to the specific phenomenon assessed (e.g., attention vs perceived accuracy) to better align with contemporary conceptualisations of interoception [@desmedt2022measures; @murphy2019]. Consistent with this view and the original aim of the validation paper, the IAS is a belief-based measure of one’s interoceptive ability rather than a direct index of accuracy. In other words, the IAS falls within the broader dimension of interoceptive sensibility or interoceptive self-report [@khalsa2018; @suksasilp2022towards], which does not imply a correlation with actual interoceptive performance. Ongoing discussions about terminology and measurement highlight the need for continued refinement to improve the reliability, validity, and conceptual clarity of interoceptive assessments [@desmedt2024conceptualization].
 
 
 # References
